--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
     </properties>
 
     <dependencies>
+         <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-javafx</artifactId>
+      <version>12.3.1</version>
+         </dependency>
+             
+    <dependency>
+      <groupId>org.kordamp.ikonli</groupId>
+      <artifactId>ikonli-feather-pack</artifactId>
+      <version>12.3.1</version>
+    </dependency>     
+             
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
